# search_engine

./: .gitignore  README.md
analyzer/: Cargo.toml
analyzer/src/: lib.rs
analyzer/src/readers/: mod.rs
analyzer/src/sorting/: mod.rs
mongo_service/: .gitignore  Cargo.toml  docker-compose.yaml  init-mongo.js
mongo_service/mongo-volume/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-8064682923368500017.wt  collection-2-8064682923368500017.wt  collection-4-8064682923368500017.wt  index-1-8064682923368500017.wt  index-3-8064682923368500017.wt  index-5-8064682923368500017.wt  index-6-8064682923368500017.wt  sizeStorer.wt
mongo_service/mongo-volume/diagnostic.data/: metrics.2021-02-20T20-07-43Z-00000  metrics.2021-02-20T20-10-34Z-00000  metrics.2021-02-20T20-14-15Z-00000  metrics.2021-02-20T20-15-57Z-00000  metrics.2021-02-20T20-20-39Z-00000  metrics.2021-02-20T20-21-43Z-00000  metrics.2021-02-20T20-23-42Z-00000  metrics.2021-02-20T20-35-08Z-00000  metrics.2021-02-20T20-36-57Z-00000  metrics.2021-02-20T20-38-25Z-00000  metrics.2021-02-20T20-43-41Z-00000  metrics.2021-02-21T00-02-26Z-00000  metrics.2021-02-21T00-05-44Z-00000  metrics.interim
mongo_service/src/: main.rs
mongo_service/test_data/: article1.txt
search_system/: .env  Cargo.toml  docker-compose.yaml
search_system/migrations/2021-02-13-182437_crete_users/: up.sql
search_system/migrations/2021-03-31-004532_create_doctable/: down.sql  up.sql
search_system/src/: main.rs
search_system/src/conf/: crypto.rs  mod.rs
search_system/src/db/: mod.rs  models.rs  schema.rs
search_system/src/mongo/: mod.rs
search_system/src/readers/: mod.rs
search_system/src/routes/: forms.rs  indexing.rs  login.rs  mod.rs  search.rs
search_system/templates/: login.html  register.html  search.html  something.html  submit_index.html
search_system/test_data/: article2.txt  article3.txt
