[package]
name = "analyzer"
version = "0.1.0"
authors = ["simGudim <simongudim@yahoo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
porter-stemmer = "0.1.1"
unicode-segmentation = "1.7.1"
stopwords = "0.1.0"
