[package]
name = "mongo_service"
version = "0.1.0"
authors = ["simGudim <simongudim@yahoo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2-mongodb = "0.2.2"
serde_derive = "1.0"
serde = "1.0"
mongodb = "0.3"
chrono = {version = "0.4", features = ["serde"]}
bson = "0.13"
r2d2 = "0.8"
regex = "1"
porter-stemmer = "0.1.1"
unicode-segmentation = "1.7.1"
stopwords = "0.1.0"
lopdf = "0.26"
pdf-extract = "0.6.2"
pdf = "0.7.1"
url = "1.7"
tokio = { version = "0.2.22", features = ["full"] }

[lib]
name = "analyzer"
path = "./../analyzer/src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

