[package]
name = "search_system"
version = "0.1.0"
authors = ["simGudim <simongudim@yahoo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.0"
actix-files = "0.5.0"
askama = "0.8"
config = "0.10"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
eyre = "0.4"
color-eyre = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"]}
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"]}
chrono = {version = "0.4", features = ["serde"]}
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "7.1"
argonautica = {version = "0.2", features = ["simd"]}
futures = {version = "0.3", features = ["compat"]}
diesel = { version = "^1.1.0", features = ["chrono", "postgres", "r2d2"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"
failure = "0.1"